# kajiya

./: README.md
assets/shaders/: default_aabb.rchit.hlsl  default_aabb.rint.hlsl
assets/shaders/rt/: rt_raster.rgen.hlsl
crates/lib/kajiya/: Cargo.toml
crates/lib/kajiya-asset/: Cargo.toml
crates/lib/kajiya-backend/: Cargo.toml
crates/lib/kajiya-backend/src/: pipeline_cache.rs
crates/lib/kajiya-backend/src/vulkan/: device.rs  ray_tracing.rs  shader.rs
crates/lib/kajiya-rg/src/: graph.rs  hl.rs  pass_builder.rs  renderer.rs  temporal.rs
crates/lib/kajiya-simple/: Cargo.toml
crates/lib/kajiya/src/: frame_desc.rs  hit_groups.rs  lib.rs  world_render_passes.rs  world_renderer.rs
crates/lib/kajiya/src/renderers/: ircache.rs  lighting.rs  mod.rs  raster_meshes.rs  reference.rs  rt_raster_meshes.rs  rtdgi.rs  rtr.rs  shadows.rs  wrc.rs
crates/lib/kajiya/src/renderers/old/: csgi.rs
crates/lib/rust-shaders/: Cargo.toml
crates/lib/rust-shaders-shared/: Cargo.toml
