[package]
name = "rust-shaders-shared"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
macaw = { version = "0.17.0", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "03f89e8ba6f236218b3c5f9b18fe03c25a4d6a5c", features = ["glam"] }
