[package]
name = "rust-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]
test = false
doctest = false

[dependencies]
rust-shaders-shared = { path = "../rust-shaders-shared" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "03f89e8ba6f236218b3c5f9b18fe03c25a4d6a5c", features = ["glam"] }
macaw = { version = "0.17.0", default-features = false, features = ["libm"] }